# Lumina

./: .dockerignore  .firebaserc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PHASE_DESCRIPTION.md  README.md  README_extracted.txt  README_summarize.txt  clippy.toml  docker-compose.yml  firebase.json  install.ps1  install.sh  master_knowledge.md  merge_all_branches.sh  package.json  rustfmt.toml  wasm-pack.stamp
.firebase/: hosting.d2Vic2l0ZS9kaXN0.cache
.github/ISSUE_TEMPLATE/: adapter.yml  bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  deploy-firebase.yml  deployment.yml  release-installers.yml  release.yml
Formula/: lumina.rb
crates/lumina-analyzer/: Cargo.toml
crates/lumina-analyzer/src/: analyzer.rs  graph.rs  lib.rs  types.rs
crates/lumina-cli/: Cargo.toml  build.rs
crates/lumina-cli/src/: commands.rs  formatter.rs  loader.rs  main.rs  master_knowledge.md  repl.rs
crates/lumina-cli/src/testing_doc/: master_knowledge.md
crates/lumina-cli/tests/: integration_test.rs
crates/lumina-cluster/: Cargo.toml
crates/lumina-cluster/src/: config.rs  election.rs  gossip.rs  lib.rs  node.rs  state_mesh.rs  transport.rs  wal.rs
crates/lumina-diagnostics/: Cargo.toml
crates/lumina-diagnostics/src/: lib.rs  location.rs  render.rs
crates/lumina-ffi/: lumina_py.py
crates/lumina-ffi/lumina_go/: lumina.go
crates/lumina-ffi/src/: lib.rs
crates/lumina-lexer/: Cargo.toml
crates/lumina-lexer/src/: lib.rs  token.rs
crates/lumina-lsp/: Cargo.toml
crates/lumina-lsp/src/: action.rs  backend.rs  diag.rs  hover.rs  inlay.rs  main.rs  refs.rs  semantic.rs  symbols.rs
crates/lumina-parser/: Cargo.toml
crates/lumina-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/lumina-runtime/: Cargo.toml
crates/lumina-runtime/src/: adapter.rs  aggregate.rs  engine.rs  factory.rs  fleet.rs  lib.rs  lsl.rs  rules.rs  snapshot.rs  state_store.rs  store.rs  timers.rs  value.rs
crates/lumina-runtime/src/adapters/: channel.rs  docker_adapter.rs  file_adapter.rs  http_adapter.rs  mod.rs  mqtt_adapter.rs  ping_adapter.rs  process_adapter.rs  proxmox_adapter.rs  static_adapter.rs
crates/lumina-runtime/src/adapters/aws/: credentials.rs  dynamodb_adapter.rs  ec2_adapter.rs  lambda_adapter.rs  mod.rs  rds_adapter.rs  s3_adapter.rs  sns_adapter.rs  sqs_adapter.rs
crates/lumina-runtime/tests/: cluster_network_test.rs  multi_instance_adapter_test.rs  orchestration_test.rs  type_safety_test.rs
crates/lumina-wasm/: Cargo.toml
crates/lumina-wasm/src/: lib.rs
crates/lumina_ffi/: Cargo.toml
crates/lumina_ffi/lumina_go/: README.md
crates/lumina_ffi/src/: lib.rs
deploy/docker/: Dockerfile
docs/: ARCHITECTURE.md  FIREBASE_GUIDELINE.md  GET_STARTED.md  Lumina_Complete_Guide.md  README.md  SPEC.md  VERSION_MAP.md  book.md  install.md  master_knowledge.md
docs/Lumina-Versions/: VERSION_MAP.md
docs/Lumina-versions/lumina-v1.7/: Lumina_Deep_Documentation_v1.7.md  Lumina_Deep_Documentation_v1.8.md  Lumina_v1_7_Implementation_Guide.md
docs/Lumina-versions/lumina-v1.8/: Lumina_Deep_Documentation_v1.8.md
docs/Lumina-versions/lumina-v1.9/: Lumina_Deep_Documentation_v1.9.md
docs/Lumina-versions/lumina-v2.0/: Lumina_Deep_Documentation_v2.0.md
docs/Version2/v2.2/: index.md
docs/Version2/v2.3/: index.md
docs/Version2/v2.4/: index.md
docs/Version2/v2.5/: index.md
docs/Version2/v2.6/: index.md
docs/Version2/v2.7/: index.md
docs/Version2/v2.8/: index.md
docs/Version2/v2.9/: index.md
docs/Version2/v3.0/: index.md
docs/archive/: master_knowledge_v2.0.md
docs/book/: diagnostics-reference.md  engine-internals.md  introduction.md  wasm-and-ffi.md  zero-to-hero.md
docs/dev/: roadmap.md
docs/guides/: cluster-deployment.md  core_reference.md  developer_guide.md  infrastructure-getting-started.md  iot-getting-started.md  language_spec.md  operations.md  tutorials.md  vs-code-marketplace-publishing.md
docs/knowledge/: 00-index.md  01-mental-model.md  02-syntax-reference.md  03-type-system.md  05-rules-and-triggers.md  07-error-encyclopedia.md  09-known-limitations.md  11-cli-reference.md
examples/: aws_multi_service.lum  iot_monitor.lum
examples/advanced/: chaos_test.lum
extensions/lumina-vscode/: .vscodeignore  README.md  language-configuration.json  lumina-lang-1.7.0.vsix  lumina-language-0.1.0.vsix  lumina-language-0.1.1.vsix  lumina-language-0.1.2.vsix  package-lock.json  package.json
extensions/lumina-vscode/snippets/: lumina.json
extensions/lumina-vscode/src/: extension.ts
extensions/lumina-vscode/syntaxes/: lumina.tmLanguage.json
installers/linux/: build_deb.sh  postinst
installers/macos/: build_pkg.sh
installers/windows/: EnvVarUpdate.nsh  build_locally.sh  lumina.nsi
playground/: package-lock.json
playground/First-Project/: ULTIMATE_TEST.lum  cooler.json  loop.lum
playground/Hydra-Fleet/: entities.lum  laws.lum  main.lum
playground/Internet-Fleet/: main.lum
playground/Lumina-101/: docker_101.lum
playground/aws-project/: README.md  main.lum
playground/greenhouse/: logic.lum  main.lum  types.lum
playground/moto-dashboard/: server.py  stress_test.py
playground/playground2/: Muhammad.lum  helloworld.lum
playground/scripts/: cascade_test.lum  getting_started.lum  loop_test.lum  main.lum  repro.lum  schema.lum  timer_demo.lum
playground/src/: App.css  App.tsx  examples.ts
public/: install.sh
scripts/: build-and-deploy-all.sh  deep_stress.py  install-binary.js  release.sh  stress_fleet.py  upload-binaries.sh
supabase/.temp/: linked-project.json
tests/: aws_provision.lum  proxmox_test.lum  stress_results.json
tests/oracle/: v20_cluster.expected
tests/spec/: bertin.lum  errors.lum  fleet.lum  v19_metal.lum  v20_cluster.lum
website/: deploy.sh  docs.html  docs.js  index.html  main.js  package-lock.json  playground.js  style.css  vite.config.js
website/public/: install.ps1  install.sh  lumina-setup-linux-amd64.deb  lumina_wasm_bg.wasm
website/src/: index.html
website/wasm/: lumina_wasm_bg.wasm
(+51 files in other folders)
