[workspace]
resolver = "2"
members = [
    "crates/lumina-lexer",
    "crates/lumina-parser",
    "crates/lumina-analyzer",
    "crates/lumina-diagnostics",
    "crates/lumina-runtime",
    "crates/lumina_ffi",
    "crates/lumina-cli",
    "crates/lumina-wasm",
    "crates/lumina-lsp",
]

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Smaller panic handler
strip = true           # Strip debug symbols
