[package]
name = "lumina-cli"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "lumina"
path = "src/main.rs"

[dependencies]
lumina-lexer = { path = "../lumina-lexer" }
lumina-parser = { path = "../lumina-parser" }
lumina-analyzer = { path = "../lumina-analyzer" }
lumina-runtime = { path = "../lumina-runtime" }
lumina-cluster = { path = "../lumina-cluster" }
lumina-diagnostics = { path = "../lumina-diagnostics" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
