[package]
name = "lumina-runtime"
version = "2.0.0"
edition = "2021"

[dependencies]
lumina-lexer = { path = "../lumina-lexer" }
lumina-parser = { path = "../lumina-parser" }
lumina-analyzer = { path = "../lumina-analyzer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(windows)))'.dependencies]
paho-mqtt = { version = "0.14", default-features = false, features = ["bundled"] }

