[package]
name = "lumina-runtime"
version = "2.1.3"
edition = "2021"

[features]
default = []
aws-ec2 = ["dep:aws-sdk-ec2", "dep:aws-config"]
aws-s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
aws-rds = ["dep:aws-sdk-rds", "dep:aws-config"]
aws-lambda = ["dep:aws-sdk-lambda", "dep:aws-config"]
aws-dynamodb = ["dep:aws-sdk-dynamodb", "dep:aws-config"]
aws-sqs = ["dep:aws-sdk-sqs", "dep:aws-config"]
aws-sns = ["dep:aws-sdk-sns", "dep:aws-config"]
aws-full = ["aws-ec2", "aws-s3", "aws-rds", "aws-lambda", "aws-dynamodb", "aws-sqs", "aws-sns"]

[dependencies]
lumina-lexer = { path = "../lumina-lexer" }
lumina-parser = { path = "../lumina-parser" }
lumina-analyzer = { path = "../lumina-analyzer" }
lumina-cluster = { path = "../lumina-cluster" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "1.1"
futures-util = "0.3.32"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bollard = "0.16.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
sysinfo = "0.30"
aws-config = { version = "1", optional = true }
aws-sdk-ec2 = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-rds = { version = "1", optional = true }
aws-sdk-lambda = { version = "1", optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }
aws-sdk-sns = { version = "1", optional = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(windows)))'.dependencies]
paho-mqtt = { version = "0.14", default-features = false, features = ["bundled"] }

